# bench_power_supply

./: .gitmodules
circuit/: bench_psu_0-cache.lib  bench_psu_0.bak  bench_psu_0.sch  custom_parts.bck  custom_parts.dcm  custom_parts.lib  stm32f103c8t6_pinout_voltage01.xcf
firmware/: CMakeLists.txt  build.sh  openocd.cfg
firmware/board/: board.h
firmware/cfg/: chconf.h  halconf.h  mcuconf.h
firmware/src/: main.c  main.cpp  max7219.cpp  max7219.hpp  pwmcfg.c  pwmcfg.h  simple.cc  spicfg.c  spicfg.h
