project(bench_power_supply)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_LANGUAGE(ASM)

FIND_PACKAGE(ChibiOS 20 COMPONENTS rt hal pal serial REQUIRED)

INCLUDE_DIRECTORIES(
  ${ChibiOS_INCLUDE_DIRS}
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/cfg
  ${CMAKE_CURRENT_SOURCE_DIR}/board
)

SET(PROJECT_SOURCES
  src/main.cpp
  board/board.c
  src/usbcfg.c
  src/pwmcfg.c
  src/spicfg.c
  src/max7219.cpp
)

ADD_DEFINITIONS(-DCORTEX_USE_FPU=FALSE)

SET(STM32_LINKER_SCRIPT ${ChibiOS_LINKER_SCRIPT})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${ChibiOS_SOURCES} ${PROJECT_SOURCES})
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME})

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
